bugfix jacoco coverage pipeline